--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 <li class="upper-panel__item-8 upper-panel__item" id="isCircle"></li>
                 <li class="upper-panel__item-9 upper-panel__item" id="isColorP"></li>
                 <li class="upper-panel__item-10 upper-panel__item" id="isMove"></li>
+                <li class="upper-panel__item-11 upper-panel__item" id="isLighten"></li>
             </ul>
             <!-- Color -->
             <ul class="lower-panel">
@@ -138,8 +139,8 @@
             </div>
             <div class="canvas-size-wrapper">
                 <button class='button-submit' type='button'>size:</button>
-                <input class="canvas-width-input" type="text" value='2000'>
-                <input class="canvas-height-input" type="text" value='2000'>
+                <input class="canvas-width-input" type="text">
+                <input class="canvas-height-input" type="text">
             </div>
             <div class="transform-panel">
                 <button class='button-flip-image' type='button'>flip</button>
@@ -170,7 +171,7 @@
                     <div class="aside-panel__save-operating aside-panel__operating">
                         <div class="range-input-wrapper">
                             <span>scale</span>
-                            <input class='range' type="range" min="1" max="30" step="1">
+                            <input class='range' type="range" min="1" max="30" step="0.1">
                             <span class="multiplier"></span>
                         </div>
                         <div class="resolution">
@@ -221,8 +222,9 @@
             </div>
         </div>
     </main>
-    <script src="./js/main.js" type="module"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
+    <script type="module" src="./js/main.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
+    <script type="text/javascript" src="./lib/tiny-color/tiny-color.js"></script>
     <script type="text/javascript" src="./js/modules/jsgif/LZWEncoder.js"></script>
     <script type="text/javascript" src="./js/modules/jsgif/NeuQuant.js"></script>
     <script type="text/javascript" src="./js/modules/jsgif/GIFEncoder.js"></script>
