feat: add saving in GIF

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class='tooltip-container'>
                   <div>circle tool <span class='tooltip-shortcut'>(c)</span></div>
                 </div>"></li>
-                <li class="upper-panel__item-9 upper-panel__item" id="isColor" data-original-title="
+                <li class="upper-panel__item-9 upper-panel__item" id="isColorPicker" data-original-title="
                 <div class='tooltip-container'>
                   <div>color picker <span class='tooltip-shortcut'>(o)</span></div>
                 </div>"></li>
@@ -284,10 +284,7 @@
     </main>
     <script type="module" src="./js/main.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
-    <script type="text/javascript" src="./lib/tiny-color/tiny-color.js"></script>
-    <script type="text/javascript" src="./js/modules/jsgif/LZWEncoder.js"></script>
-    <script type="text/javascript" src="./js/modules/jsgif/NeuQuant.js"></script>
-    <script type="text/javascript" src="./js/modules/jsgif/GIFEncoder.js"></script>
+    <script type="text/javascript" src="./lib/tiny-color/tiny-color.js"></script> 
 </body>
 
 </html>
