--- a/index.html
+++ b/index.html
@@ -314,8 +314,7 @@
                     </div>
                     <div class="aside-panel__import-operating aside-panel__operating">
                         <div class="input-wrapper">
-                            <input class="url" type="text" placeholder="paste image URL"
-                                value="https://avatars.mds.yandex.net/get-pdb/1939052/bd5d6894-9bcb-413b-bce3-63ba28f4e159/s1200">
+                            <input class="url" type="text" placeholder="paste image URL">
                             <div class="clean clean-url"></div>
                         </div>
                         <div class="or">or</div>
