--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <meta http-equiv="Access-Control-Allow-Origin" content="*"> -->
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <title>Document</title>
     <link rel="shortcut icon" href="./img/favicon/favicon.svg">
     <link rel="stylesheet/less" href="./css/index.less">
